Pull #18627: Add `JavaLangAPIs`